# Hostingbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  app.json  docker-compose.yml  heroku.yml  main.py  pyproject.toml  railway.json  render.yaml  requirements.txt
src/: main.py
